--- a/bors.toml
+++ b/bors.toml
@@ -2,5 +2,5 @@ status = [
     "Done",
 ]
 use_squash_merge = true
-delete_merged_branches = true
+delete_merged_branches = false
 timeout_sec = 3600 # 45 mins
